<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_request_activity.CreateRequestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/Text_Subtitle_18pt"
        android:textColor="@color/base_700"
        android:navigationIcon="@drawable/icon_back"
        android:backgroundTint="@color/info_600"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_create"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/request_description_title"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <EditText
                    android:id="@+id/request_description_data"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_description"
                    android:inputType="text"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <TextView
                    android:id="@+id/start_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/start_date"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <TextView
                    android:id="@+id/request_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:layout_constraintTop_toBottomOf="@id/start_date_title"
                    android:hint="Выберите дату"
                    android:gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />

                <ImageButton
                    android:id="@+id/start_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_calendar_outline"
                    android:backgroundTint="@color/info_600"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/request_start_date"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="9dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/start_date">

                <TextView
                    android:id="@+id/end_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/end_date"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <TextView
                    android:id="@+id/request_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:layout_constraintTop_toBottomOf="@id/end_date_title"
                    android:hint="Выберите дату"
                    android:gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />

                <ImageButton
                    android:id="@+id/end_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_calendar_outline"
                    android:backgroundTint="@color/info_600"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/request_end_date"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="9dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/destination_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/destination_description_title"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <EditText
                    android:id="@+id/destination_description_data"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_description"
                    android:inputType="text"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/destination_office_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/destination_description">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/destination_create_office_id_title"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />


                <RelativeLayout
                    android:id="@+id/office_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_with_shadow"
                    android:orientation="vertical"
                    android:radius="10dp">

                    <Spinner
                        android:id="@+id/office_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Text_Body_16pt"
                        android:textColor="@color/base_900"
                        android:textColorHint="@color/base_400" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/destination_seat_place"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/destination_office_id">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/seat_place_title"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <EditText
                    android:id="@+id/destination_seat_place_data"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_seat_place"
                    android:inputType="text"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ticket_URL"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/destination_seat_place">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/ticket"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <EditText
                    android:id="@+id/ticket_URL_data"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_url"
                    android:inputType="textUri"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="28dp"
                android:padding="4dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticket_URL">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Text_Body2_14pt"
                    android:breakStrategy="simple"
                    android:singleLine="false"
                    android:text="@string/comment_title"
                    android:textColor="@color/base_700"
                    android:textIsSelectable="true"
                    />

                <EditText
                    android:id="@+id/comment_data"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="Поле необязательно для заполнения"
                    android:inputType="textUri"
                    android:padding="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/Text_Body_16pt"
                    android:textColor="@color/base_900"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/create"
        style="@style/ButtonPrimary"
        />

    <FrameLayout
        android:id="@+id/progressBarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/load"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pBar"
            style="@style/GenericProgressIndicator" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>