<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_user_activity.CreateUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/userEmail"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/userEmailData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userPassword"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/userEmail"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/userPasswordData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/firstName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/userPassword"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Фамилия"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/firstNameData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="фамилия"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/firstName"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Имя"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/secondNameData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="имя"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/role"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/secondName"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Роль"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/roleData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="admin или user"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/subordinates"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/role"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    style="@style/Text_Body2_14pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Сотрудник в рассмотрении"
                    android:textColor="@color/base_700" />
                <EditText
                    android:id="@+id/subordinatesData"
                    style="@style/Text_Body_16pt"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="id"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/base_50"
                    android:textColorHint="@color/base_400" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonContinue"
        style="@style/ButtonPrimary"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/progressBarContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/load"
        android:clickable="true"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/pBar"
            style="@style/GenericProgressIndicator" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>